# css

./: .gitattributes  README.md  cluster_themes.json  css.csv  desc_stat.ipynb  embed-llama.ipynb  embed.ipynb  kmeans_tsne.ipynb  pyproject.toml  umap.ipynb
data/: css_speaker_topic_clusters_summary.json  css_topic_ada002-embeddings.csv
utils/: embeddings.py  file_utils.py
