[project]
name = "css"
version = "0.1.0"
description = ""
authors = [
    {name = "chaee",email = "mcssfw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai (>=1.63.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.48.3,<5.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "numba (>=0.61.0,<0.62.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "seaborn (>=0.13.2,<0.14.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
